welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: '=' expected but ';' found.
  if (12 < a < 21){NbAdo = NbAdo + 1}}
^